# meet_note

./: .env.sample  .gitignore  README.md  app_run.cmd  pyproject.toml  test.json
.streamlit/: config.toml
app/: main.py
app/llm_strategies/: anthropic_strategy.py  base_chat_model_strategy.py  chat_model_strategy.py  deepseek_strategy.py  model.py  openai_strategy.py  strategy_factory.py
app/ui/: app_state.py  components.py  correction_components.py  document_components.py  file_components.py  main_renderer.py  sidebar.py  speaker_components.py  transcription_components.py  ui_components.py
app/utils/: config.py  correction_editor.py  document_generation - Copy.py  document_generation.py  error_handler.py  file_handler.py  llm_stats.py  logger.py  prompts.py  speaker_analysis.py  speaker_editor.py  speech_to_text.py  transcript_analysis.py  transcript_correction.py
context/: terms.sample.md
